# bookstore_app

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  conftest.py  db.sqlite3  docker-compose.yml  drf_status.txt  env.dev  pyproject.toml  pytest.ini  requirements.txt  teste_codefactor.py
.github/workflows/: build.yml  ci.yml  deploy.yml  django-tests.yml  pythonanywhere-deploy.yml  workflow-pr.yaml
bookstore/: create_admin.py  settings.py  urls.py  views.py
bookstore/templates/: hello_world.html
order/: factories.py  tests.py  urls.py
order/migrations/: 0001_initial.py  0002_create_superuser.py  0002_order_quantity.py  0003_remove_order_quantity.py  0004_create_superuser.py
order/models/: order.py
order/serializers/: order_serializer.py
order/test_suite/: test_order_model.py  test_order_serializer.py  test_order_viewset.py
order/tests/: test_order_model.py  test_order_serializer.py  test_order_viewset.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: admin.py  tests.py  urls.py
product/migrations/: 0001_initial.py  0002_category_description.py
product/models/: category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/test_suite/: test_category_viewset.py  test_product_viewset.py
product/tests/: product_tests.py  test_category_viewset.py  test_product_viewset.py
product/tests/test_viewsets/: test_category_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
