[tool.poetry]
name = "bookstore-app"
version = "0.1.0"
description = "Bookstore API"
authors = ["Evaldoer <evaldorode@gmail.com>"]
readme = "README.md"
package-mode = false   # 🔥 impede o erro "No file/folder found for package"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
djangorestframework = "^3.15.2"
django-extensions = "^3.2.3"
django-debug-toolbar = "^4.4.6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
factory-boy = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
